# finly-backend

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
card_icons/: icon_colors.json
google_oauth_api_client/: go.mod  go.sum  main.go
html/: generic_message.html  reset_password.html  terms.html
migrations/: 20241229001849_init.sql  20241229202753_init.down.sql  20241229202753_init.sql  20241229202753_init.up.sql
sql/: create_database.sql  init_session_db.sql
src/: database.rs  jwt.rs  main.rs  middleware.rs  state.rs
src/controllers/: auth.rs  category.rs  credit_card.rs  mod.rs  reset_password.rs  ses.rs  session_mgm.rs
src/handlers/: auth.rs  category.rs  credit_card.rs  html.rs  macros.rs  misc.rs  mod.rs  reset_password.rs  session_mgm.rs  static_content.rs  util.rs
src/model/: category.rs  credit_card.rs  credit_card_bill.rs  mod.rs  reset_password.rs  session.rs  subcategory.rs  user.rs
src/request_types/: auth.rs  category.rs  credit_card.rs  mod.rs  reset_password.rs
src/routes/: mod.rs
