[package]
name = "finly-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.9.0"
bcrypt = "0.16.0"
chrono = "0.4.39"
dotenv = "0.15.0"
env_logger = "0.11.6"
jsonwebtoken = "9.3.0"
log = { version = "0.4.22", features = ["std"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.42.0", features = ["macros"] }

