[package]
name = "finly-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-rt = "2.10.0"
actix-web = { version = "4.9.0", features = ["openssl"] }
aws-config = { version = "1.5.14", features = ["behavior-version-latest"] }
aws-sdk-sesv2 = "1.61.0"
bcrypt = "0.16.0"
chrono = "0.4.39"
dotenv = "0.15.0"
env_logger = "0.11.6"
futures-util = "0.3.31"
jsonwebtoken = "9.3.0"
log = { version = "0.4.22", features = ["std"] }
openssl = "0.10.68"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
tokio = { version = "1.42.0", features = ["macros", "rt"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }

